--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
+background
+botoes 
+cores de texto
+ 
+:root {
+   --background-primary-color: #ffffff;
+   --background-secondary-color: #F5F5F5;
+   --background-tertiary-color: #000000;
+   
+   --buttom-primary-color: #8F0101;
+   --buttom-secondary-color: #B81515;
+
+   --text-primary-color: #222222
+   --text-secondary-color: #FFFFFF;
+}
+
+
 /* Reset CSS */
 *,
 *::before,
