--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,29 @@
-background
-botoes 
-cores de texto
- 
+@font-face {
+    font-family: 'montserrat';
+    src: url('../fonts/Montserrat-VariableFont_wght.ttf') format('truetype');
+    font-weight: 100 900;
+    font-style: normal;
+    font-display: swap;
+}
+
 :root {
    --background-primary-color: #ffffff;
    --background-secondary-color: #F5F5F5;
    --background-tertiary-color: #000000;
    
-   --buttom-primary-color: #8F0101;
-   --buttom-secondary-color: #B81515;
+   --primary-color: #8F0101;
+   --secondary-color: #B81515;
 
-   --text-primary-color: #222222
+   --text-primary-color: #222222;
    --text-secondary-color: #FFFFFF;
+  
+   --title-weigth: 700;
+   --text-weigth: 400;
+   --menu-weigth: 500;
+   --footer-weigth: 400;
+   --cards-weigth: 400;
+   --cards-weigth-bold: 700;
 }
-
 
 /* Reset CSS */
 *,
@@ -50,8 +60,17 @@ select {
     font: inherit;
 }
 
-p,
-h1,
+p {
+    color: var(--text-primary-color);
+    font-family: 'montserrat', sans-serif;
+    font-weight: var(--text-weigth);
+}
+
+h1 {
+    color: var(--primary-color);
+    font-family: 'montserrat', sans-serif;
+    font-weight: var(--title-weigth);
+}
 h2,
 h3,
 h4,
