--- a/css/global.css
+++ b/css/global.css
@@ -32,33 +32,6 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-  }
-  
-  html {
-    font-size: 16px;
-    scroll-behavior: smooth;
-  }
-  
-  body {
-    line-height: 1.5;
-    -webkit-font-smoothing: antialiased;
-  }
-  
-  img,
-  picture,
-  video,
-  canvas,
-  svg {
-    display: block;
-    max-width: 100%;
-  }
-  
-  input,
-  button,
-  textarea,
-  select {
-    font: inherit;
-  }
   
   p {
     color: var(--text-primary-color);
@@ -70,22 +43,11 @@
     color: var(--primary-color);
     font-family: "montserrat", sans-serif;
     font-weight: var(--title-weigth);
-  }
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    overflow-wrap: break-word;
+ 
   }
   
-  ul,
-  ol {
-    list-style: none;
-  }
-  
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
-  
+body {
+    font-family:"Montserrat";
+}
+
+}
