--- a/css/hero.css
+++ b/css/hero.css
@@ -6,6 +6,16 @@
   background-repeat: no-repeat;
 }
 
+.hero h2 {
+  padding: 80px 24px;
+  margin: 0px;
+  font-weight: var(--text-weigth);
+  font-size: 20px;
+  text-align: center;
+  gap: 56px;
+  line-height: 32px;
+}
+
 @media screen and (min-width: 768px) {
     .hero-img {
         height: 620px;
@@ -13,7 +23,18 @@
         background-size: cover;
         background-repeat: no-repeat;
       }
-    
+
+      .hero h2 {
+        padding: 88px 60px;
+        margin: 0px;
+        font-weight: var(--text-weigth);
+        font-size: 32px;
+        text-align: center;
+        gap: 56px;
+        line-height: 150%;
+      }
+      
+     
 
 }
 
@@ -25,5 +46,18 @@
         background-repeat: no-repeat;
         background-position: center;
       }
+
+
+      .hero h2 {
+        padding: 104px 120px;
+        margin: 0px;
+        font-weight: var(--text-weigth);
+        font-size: 32px;
+        text-align: center;
+        gap: 56px;
+        line-height: 150%;
+      }
+
+    
     
 }
