--- a/css/offers.css
+++ b/css/offers.css
@@ -14,6 +14,8 @@
   display: block;
   background-color: transparent;
   position: block;
+  padding: 0;
+  margin-bottom: 24px;
 }
 
 .card header p {
@@ -21,13 +23,13 @@
   font-weight: var(--text-weigth);
 }
 .card header h3 {
-    font-size: 40px;
-    font-weight: var(--title-weigth);
-    margin: 8px 0 0;
-  }
-   
+  font-size: 40px;
+  font-weight: var(--title-weigth);
+  margin: 8px 0 0;
+}
+
 .card header span {
-    font-size: 32px;
-    margin-top: 24px;
-    display: inline-block;
-  } 
+  font-size: 32px;
+  margin-top: 24px;
+  display: inline-block;
+}
