--- a/css/offers.css
+++ b/css/offers.css
@@ -33,3 +33,25 @@
   margin-top: 24px;
   display: inline-block;
 }
+
+@media screen and (min-width: 1024px) {
+  .card {
+    width: 588px;
+    height:308px;
+  }
+  .card header p {
+    font-size: 20px;
+    font-weight: var(--text-weigth);
+  }
+  .card header h3 {
+    font-size: 48px;
+    font-weight: var(--title-weigth);
+    margin: 8px 0 0;
+  }
+
+  .card header span {
+    font-size: 40px;
+    margin-top: 24px;
+    display: inline-block;
+  }
+}
