--- a/css/offers.css
+++ b/css/offers.css
@@ -1,3 +1,10 @@
+.offers-cards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+}
+
 .card {
   color: var(--text-secondary-color);
   background-color: black;
@@ -32,12 +39,38 @@
   font-size: 32px;
   margin-top: 24px;
   display: inline-block;
+  font-weight: var(--title-weigth);
 }
 
+.card.japao {
+  background-image: url(../img/bg-fundo-card-japao.png);
+}
+.card.san-andreas {
+  background-image: url(../img/bg-fundo-card-san-andreas.png);
+}
+.card.paraiba {
+  background-image: url(../img/bg-fundo-card-paraiba.png);
+}
+.card.manaus {
+  background-image: url(../img/bg-fundo-manaus.png);
+}
+
+@media screen and (min-width: 768px) {
+  .offers-cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
 @media screen and (min-width: 1024px) {
+  .offers-cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
   .card {
-    width: 588px;
-    height:308px;
+    width: 420px;
+    height: 308px;
   }
   .card header p {
     font-size: 20px;
@@ -53,5 +86,36 @@
     font-size: 40px;
     margin-top: 24px;
     display: inline-block;
+  }
+
+  .card.japao {
+    background-image: url(../img/bg-fundo-card-japao.png) no-repeat;
+    background-size: cover;
+  }
+  .card.san-andreas {
+    background-image: url(../img/bg-fundo-card-san-andreas.png) no-repeat;
+    background-size: cover;
+  }
+  .card.paraiba {
+    background-image: url(../img/bg-fundo-card-paraiba.png) no-repeat;
+    background-size: cover;
+  }
+  .card.manaus {
+    background-image: url(../img/bg-fundo-manaus.png) no-repeat;
+    background-size: cover;
+  }
+
+  @media screen and (min-width: 1440px) {
+    .card {
+      width: 588px;
+      height: 308px;
+    }
+  }
+
+  @media screen and (min-width: 1920px) {
+    .offers-cards {
+      width: 1250px;
+      margin: 0 auto;
+    }
   }
 }
