--- a/css/offers.css
+++ b/css/offers.css
@@ -5,7 +5,7 @@
   gap: 24px;
 }
 
-.card {
+.offers-cards .card {
   color: var(--text-secondary-color);
   background-color: black;
   padding: 24px 16px;
@@ -17,7 +17,7 @@
   text-align: center;
 }
 
-.card header {
+.offers-cards .card header {
   display: block;
   background-color: transparent;
   position: block;
@@ -25,33 +25,33 @@
   margin-bottom: 24px;
 }
 
-.card header p {
+.offers-cards .card header p {
   font-size: 20px;
   font-weight: var(--text-weigth);
 }
-.card header h3 {
+.offers-cards .card header h3 {
   font-size: 40px;
   font-weight: var(--title-weigth);
   margin: 8px 0 0;
 }
 
-.card header span {
+.offers-cards .card header span {
   font-size: 32px;
   margin-top: 24px;
   display: inline-block;
   font-weight: var(--title-weigth);
 }
 
-.card.japao {
+.offers-cards .card.japao {
   background-image: url(../img/bg-fundo-card-japao.png);
 }
-.card.san-andreas {
+.offers-cards .card.san-andreas {
   background-image: url(../img/bg-fundo-card-san-andreas.png);
 }
-.card.paraiba {
+.offers-cards .card.paraiba {
   background-image: url(../img/bg-fundo-card-paraiba.png);
 }
-.card.manaus {
+.offers-cards .card.manaus {
   background-image: url(../img/bg-fundo-manaus.png);
 }
 
@@ -68,45 +68,45 @@
     flex-wrap: wrap;
     justify-content: center;
   }
-  .card {
+  .offers-cards .card {
     width: 420px;
     height: 308px;
   }
-  .card header p {
+  .offers-cards .card header p {
     font-size: 20px;
     font-weight: var(--text-weigth);
   }
-  .card header h3 {
+  .offers-cards .card header h3 {
     font-size: 48px;
     font-weight: var(--title-weigth);
     margin: 8px 0 0;
   }
 
-  .card header span {
+  .offers-cards .card header span {
     font-size: 40px;
     margin-top: 24px;
     display: inline-block;
   }
 
-  .card.japao {
+  .offers-cards .card.japao {
     background-image: url(../img/bg-fundo-card-japao.png) no-repeat;
     background-size: cover;
   }
-  .card.san-andreas {
+  .offers-cards .card.san-andreas {
     background-image: url(../img/bg-fundo-card-san-andreas.png) no-repeat;
     background-size: cover;
   }
-  .card.paraiba {
+  .offers-cards .card.paraiba {
     background-image: url(../img/bg-fundo-card-paraiba.png) no-repeat;
     background-size: cover;
   }
-  .card.manaus {
+  .offers-cards .card.manaus {
     background-image: url(../img/bg-fundo-manaus.png) no-repeat;
     background-size: cover;
   }
 
   @media screen and (min-width: 1440px) {
-    .card {
+    .offers-cards .card {
       width: 588px;
       height: 308px;
     }
