--- a/css/global.css
+++ b/css/global.css
@@ -1,25 +1,24 @@
 @font-face {
-  font-family: "montserrat";
-  src: url("../fonts/Montserrat-VariableFont_wght.ttf") format("truetype");
+  font-family: "Montserrat";
+  src: url(../fonts/Montserrat-VariableFont_wght.ttf);
   font-style: normal;
   font-display: swap;
 }
 
 :root {
+  --primary-color: #8f0101;
+  --secondary-color: #b81515;
+
   --background-primary-color: #ffffff;
   --background-secondary-color: #f5f5f5;
   --background-tertiary-color: #000000;
-  
-
-  --primary-color: #8f0101;
-  --secondary-color: #b81515;
 
   --text-primary-color: #222222;
   --text-secondary-color: #ffffff;
 
-  --title-weigth: 700;
-  --text-weigth: 400;
-  --menu-weigth: 500;
+  --title-weight: 700;
+  --text-weight: 400;
+  --menu-text-weight: 500;
 }
 
 /* CSS RESET */
@@ -43,13 +42,27 @@ body {
   font-family: "Montserrat";
   color: var(--text-primary-color);
 }
-.section-title h2 {
-  font-size: 28px;
-  font-weight: var(--title-weigth);
-  margin-top: 88px;
-  text-align: center;
+
+section {
+  width: 312px;
+  margin: 0 auto 88px;
 }
 
+section.hero,
+section.bottom-hero {
+  width: 100%;
+  margin: 0;
+}
+.section-title {
+  width: 280px;
+  margin: 0 auto 32px;
+}
+.section-title h2 {
+  font-size: 28px;
+  font-weight: var(--title-weight);
+  margin: 0;
+  text-align: center;
+}
 .section-title hr {
   width: 180px;
   height: 4px;
@@ -58,30 +71,54 @@ body {
   margin: 16px auto 32px;
 }
 
+.content-title {
+  font-size: 28px;
+  font-weight: var(--title-weight);
+  margin: 0 0 24px;
+}
+.content-text {
+  font-size: 20px;
+  font-weight: var(--text-weight);
+  line-height: 32px;
+}
+
+.button {
+  min-width: 280px;
+  height: 64px;
+  color: var(--text-secondary-color);
+  font-weight: var(--title-weight);
+  font-size: 20px;
+  background-color: var(--secondary-color);
+  border-radius: 16px;
+  display: inline-block;
+  text-decoration: none;
+  line-height: 64px;
+  text-align: center;
+}
+
 @media screen and (min-width: 768px) {
+  section {
+    width: 648px;
+  }
+  .section-title {
+    width: 100%;
+  }
   .section-title h2 {
     font-size: 32px;
   }
 }
 
-.button {
-  width: 280px;
-  height: 64px;
-  color: var(--text-secondary-color);
-  gap: 32px;
-  background-color: var(--secondary-color);
-  text-align: center;
-  font-size: 20px;
-  font-weight: var(--title-weigth);
-  border-radius: 8px;
-  text-decoration: none;
-  line-height: 64px;
-  display: inline-block;
-}
-
 @media screen and (min-width: 1024px) {
-  .button:hover{
+  section {
+    width: 900px;
+  }
+  .button:hover {
     background-color: var(--primary-color);
   }
-  
+}
+
+@media screen and (min-width: 1440px) {
+  section {
+    width: 1200px;
+  }
 }
